# claude-usage-tracker

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  GIT.md  README.md  tauri.conf.json
.cargo/: config.toml
.github/workflows/: release.yml
capabilities/: default.json
openspec/: project.md
openspec/changes/archive/2026-01-09-simplify-codebase/: proposal.md  tasks.md
openspec/changes/archive/2026-01-09-simplify-codebase/specs/code-quality/: spec.md
openspec/specs/code-quality/: spec.md
src/: api.rs  auth.rs  commands.rs  config.rs  events.rs  lib.rs  main.rs  service.rs  tray.rs
tests/: integration.rs
